# museum-nightmare

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  game_logs.txt
.github/: changelog-config.json
.github/workflows/: build.yml  ci-cross-platform.yml  ci.yml  libs-update.yml  release.yml
assets/: config.toml  resources.toml
assets/levels/: level1.tmx  level1.toml  level1.txt  test_parallax.tmx  tileset.tsx
assets/maps/: rpg-icons.tsx  stage1.tmx
assets/themes/: app.theme  dark.theme
cmake/: Dependencies.cmake  InstallAndPackage.cmake  compiler_flags.cmake  configure_ext_libs.cmake  copy_dlls.cmake  copy_dlls_for_packaging.cmake  dependencies.cmake  package.cmake  test.cmake  test_dependencies.cmake  utils.cmake
docs/: INPUT_SYSTEM.md
resources/: config.toml
scripts/: check_dependencies.py
src/: main.cpp  test_parallax.cpp
src/audio/: AudioTypes.hpp  CMakeLists.txt  SoundManager.cpp  SoundManager.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp  MouseMapper.hpp  input_config.toml
src/core/: Camera.cpp  Camera.hpp  EventSoundMap.hpp  Game.cpp  Game.hpp  GameState.hpp  ResourceManager.cpp  ResourceManager.hpp  SoundId.hpp  SoundManager.cpp  SoundManager.hpp  StateManager.cpp  StateManager.hpp  Utils.hpp  const.hpp
src/core/containers/: bimap.hpp
src/game/: Camera.cpp  Camera.hpp  GameObjectManager.cpp  GameObjectManager.hpp  LevelLoader.cpp  LevelLoader.hpp  TextureManager.cpp  TextureManager.hpp
src/game/level/: GIDMapper.cpp  GIDMapper.hpp  LevelLoader.cpp  LevelLoader.hpp
src/game/levels/: GridLevelLoader.hpp  Level.cpp  Level.hpp  Level1.hpp  Level2.hpp  LevelData.hpp  LevelLoader.cpp  LevelLoader.hpp  ParallaxLayer.cpp  ParallaxLayer.hpp
src/game/objects/: Actor.cpp  Actor.hpp  BackgroundObject.cpp  BackgroundObject.hpp  Enemy.cpp  Enemy.hpp  FloorObject.cpp  FloorObject.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  ParallaxLayer.cpp  ParallaxLayer.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
src/game/objects/actor/: Actor.cpp  Actor.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp
src/game/physics/: ContactListener.hpp  PhysicsConstants.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  b2_config.h  b2_settings_msvc.h  b2_user_settings.h  b2_windows_config.h
src/game/states/: ActorState.cpp  ActorState.hpp  ActorStates.hpp
src/game/utils/: GridUtils.hpp
src/input/: AIActionController.cpp  AIActionController.hpp  AIInputProvider.cpp  AIInputProvider.hpp  Action.hpp  Actions.hpp  HumanInputProvider.cpp  HumanInputProvider.hpp  IInputProvider.hpp  InputManager.cpp  InputManager.hpp
src/input/devices/: ControllerDevice.cpp  ControllerDevice.hpp  GenericInputDevice.hpp  IInputDevice.hpp  InputDevice.cpp  InputDevice.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp  MouseDevice.cpp  MouseDevice.hpp
src/input/mappers/: ControllerMapper.cpp  ControllerMapper.hpp  KeyMapper.cpp  KeyMapper.hpp  MouseMapper.cpp  MouseMapper.hpp
src/input/providers/: InputProvider.hpp  PlayerInputProvider.cpp  PlayerInputProvider.hpp  RandomAIInputProvider.cpp  RandomAIInputProvider.hpp
src/screens/: GameScreen.cpp  GameScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  PauseScreen.cpp  PauseScreen.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  SettingsScreen.cpp  SettingsScreen.hpp  TestScreen.cpp  TestScreen.hpp
src/tests/: TestWindow.cpp
src/ui/: Button.cpp  Button.hpp  ButtonBuilder.hpp  Dropdown.cpp  Dropdown.hpp  DropdownWidget.cpp  DropdownWidget.hpp  GuiBuilder.hpp  MenuBuilder.cpp  MenuBuilder.hpp  TGUIButtonWrapper.cpp  TGUIButtonWrapper.hpp  Widget.cpp  Widget.hpp  WidgetStyle.hpp
tests/: CMakeLists.txt  input_system_test.cpp  test_input.cpp
tests/game/: ParallaxLayerTest.cpp
tests/input/: ControllerHotplugTest.cpp  EnemyAITest.cpp  PlayerInputTest.cpp
tests/input/mappers/: MapperThreadTests.cpp
tools/: generate_tileset.py
tools/dependency_checker/: CMakeLists.txt  README.md
tools/dependency_checker/cmake/: configure_ext_libs.cmake  dependencies.cmake
tools/dependency_checker/src/: cmake_parser.cpp  cmake_parser.hpp  github_api.cpp  github_api.hpp  main.cpp
